SERVER-49769 add move assignment operator to radix_iterator